# ponder-bayes

./: .gitignore  LICENSE  README.md  gen_pip_reqs.sh  pyproject.toml  requirements.txt  setup.py
lisa/: env.job  seeds.txt  tensorboard.sh
lisa/extrapolate/aRGT/: train.job
lisa/extrapolate/groupthink/: train.job
lisa/extrapolate/lagt/: train.job
lisa/extrapolate/pondernet/: train.job  train_replicate.job
lisa/extrapolate/rgt/: train.job
lisa/interpolate/aRGT/: train.job
lisa/interpolate/groupthink/: train.job
lisa/interpolate/lagt/: train.job
lisa/interpolate/ponderbayes/: train.job
lisa/interpolate/pondernet/: train.job  train_replicate.job  train_replicate_mnist.sh
lisa/interpolate/rgt/: train.job
lisa/legacy/: train.job  train_replicate.job
notebooks/: accuracies.ipynb
ponderbayes/: basic_run_file.sh
ponderbayes/data/: datamodules.py  datasets.py
ponderbayes/models/: RGT.py  __init__.py  aRGT.py  groupthink.py  lagt.py  losses.py  mcmc.py  ponderbayes.py  ponderbayes_pyro.py  pondernet.py  pondernet_mnist.py  ptl_wrapper.py
ponderbayes/models/legacy/: pondernet.py  run.sh  train.py
ponderbayes/run/: eval.py  hparams.txt  run.sh  run_new.sh  test.py  test.sh  train.py  train_mnist.py  train_old.py  train_older.py
ponderbayes/utils/: __init__.py  metrics.py
reports/figures/: models_boxplot.eps  val_results.eps
reports/models/: models.tex
reports/report/: main.tex  neurips_2022.sty  references.bib
src/: basic_run_file.sh
src/data/: datasets.py
src/models/: pondernet.py
