[tool.poetry]
name = "ponderbayes"
version = "0.1.0"
description = "Official repository for the paper \"PonderBayes: Rationally Pondering Neural Networks\""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
tensorboard = "^2.9.0"
pyro-ppl = "^1.8.1"
pip = ">=21.3"
ipywidgets = "^7.7.0"
blitz-bayesian-pytorch = "^0.2.8"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.0"
black = {extras = ["jupyter"], version = "^22.3.0"}
flake8 = "^4.0.1"
jupyterlab-code-formatter = "^1.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
